--- a/block-BHaaaf/index.html
+++ b/block-BHaaaf/index.html
@@ -1,9 +1,13 @@
-<!-- 
-  ### Create a simple page with an external stylesheet.
-
-  TODO:
-    - Create a simple page `(index.html)` with one heading following with a long paragraph.
-    - Create an external stylesheet `(style.css)` and change the color and font size of the heading and paragraph.
-    - Also, change the background color of the body.
-    - Use different selectors to select different elements.
--->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ASSIGNMENT 1</title>
+  <link rel="stylesheet" ahref="style.css"/>
+</head>
+<body>
+  <p></p>
+<h1></h1>
+</body>
+</html>
