--- a/block-BHaaaf/index.html
+++ b/block-BHaaaf/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ASSIGNMENT 1</title>
-  <link rel="stylesheet" ahref="style.css"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <p>farhan</p>
