--- a/block-BHaaag/index.html
+++ b/block-BHaaag/index.html
@@ -16,3 +16,32 @@
     - Wrap the text or word inside `<em></em> or <i></i>` tag to make it italicize.
     - Use `<address></address>` tag for addresses. 
 -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ASSIGNMENT 2</title>
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+  <h1>Peter Cullins</h1>
+  <p>peter.cullins@gmail.com | &nbsp; <address>Rochster,New York</address> </p>
+<h2>EXPERIENCE</h2>
+<h3>specific skills used</h3>
+<p>he was the  best in varius usage of technologies.</p>
+<h4>developer</h4>
+<p>no one below him in this world nor up him either</p>
+<h5>intern</h5>
+<p>worked for various companies under various wishes and aim</p>
+<h2>skills</h2>
+<strong>
+ <p>fast</p>
+ <p>speeder</p> 
+ <p>better</p>
+ <h2>connect</h2>
+</strong>
+ <h6> <em> twitter &nbsp; linkdeln &nbsp; instagram &nbsp; facebook</em></h6>
+</body>
+</html>
