--- a/block-BHaaai/index.html
+++ b/block-BHaaai/index.html
@@ -1,12 +1,35 @@
-<!-- 
-  ### Create a page according to the design shown below.
 
-  TODO:
-    - Open this image in a window for the design layout - (https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/introduction/assignment2.png)
-    - Use external stylesheet to style the page.
-    - For applying image use `<img src="" alt="">` tag. 
-      Keep source of the image inside `src=""` attribute. 
-      Put an alternative text of the image inside `alt=""` attribute. 
-      You can can also apply width and height to the image by applying `width="" and height=""` attribute inside image tag. for example - `<img src="suraj.jpg" alt="suraj" width="200" height="200">`
-    - For centering the element apply `text-align: center`, to the parent of the element in CSS. 
--->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ASSIGNMENT 3</title>
+  <link rel="stylesheet" href="style.css" />
+  <img src="tailor (2).png" alt="fresh" width="400" height="200" style="text-align: center;">
+</head>
+<body>
+  <h1>Peter Cullins</h1>
+  <p>peter.cullins@gmail.com | &nbsp; <address>Rochster,New York</address> </p>
+<h2>EXPERIENCE</h2>
+<h3>specific skills used</h3>
+<p>he was the  best in varius usage of technologies.</p>
+<h4>developer</h4>
+<p>no one below him in this world nor up him either</p>
+<h5>intern</h5>
+<p>worked for various companies under various wishes and aim</p>
+<h2>skills</h2>
+<strong>
+ <p>fast</p>
+ <p>speeder</p> 
+ <p>better</p>
+ <h2>connect</h2>
+</strong>
+ <h6> <em> twitter &nbsp; linkdeln &nbsp; instagram &nbsp; facebook</em></h6> 
+</body>
+</html>
+
+
+
+
