--- a/block-BHaaai/index.html
+++ b/block-BHaaai/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ASSIGNMENT 3</title>
   <link rel="stylesheet" href="style.css" />
-  <img src="tailor (2).png" alt="fresh" width="400" height="200" style="text-align: center;">
+  <img src="tailor (2).png" alt="hunt" width="400" height="200" style="text-align: center;">
 </head>
 <body>
   <h1>Peter Cullins</h1>
